Fix post padding on mobile

--- a/src/app/blog/[slug]/page.module.css
+++ b/src/app/blog/[slug]/page.module.css
@@ -157,6 +157,10 @@
       padding: 32px;
       padding-bottom: 80px;
     }
+
+    .post {
+      padding: 0 1rem 0 1rem;
+    }
   
     .main {
       align-items: center;
